[gd_scene format=3 uid="uid://dft6uwqxifwnh"]

[ext_resource type="Texture2D" uid="uid://n4ivn1vdx8tu" path="res://sprites/enemies/zombie_strow/strawberry_zombie_walking1.png" id="1_2hqhx"]
[ext_resource type="Script" uid="uid://ba78qhos8cutk" path="res://scenes/enemies/enemy_base/enemy_base.gd" id="1_dsnet"]
[ext_resource type="Script" uid="uid://0jnjbdmlqedf" path="res://state_machine/state_machine.gd" id="2_2fyc8"]
[ext_resource type="Texture2D" uid="uid://bq0sy5bu0i1ox" path="res://sprites/enemies/zombie_strow/croler/strawberry_zombie_down1.png" id="2_ouw8c"]
[ext_resource type="Texture2D" uid="uid://c1hm80o6ul4fl" path="res://sprites/enemies/zombie_strow/strawberry_zombie_walking2.png" id="3_ax8da"]
[ext_resource type="Texture2D" uid="uid://0vyu6bbcfg62" path="res://sprites/enemies/zombie_strow/croler/strawberry_zombie_down2.png" id="3_xf5mb"]
[ext_resource type="Texture2D" uid="uid://jsly0ely63ir" path="res://sprites/enemies/zombie_strow/croler/strawberry_zombie_down3.png" id="4_avrlj"]
[ext_resource type="Texture2D" uid="uid://cwbhmwsowf83j" path="res://sprites/enemies/zombie_strow/strawberry_zombie_walking3.png" id="4_f1jo1"]
[ext_resource type="Script" uid="uid://5oxfnqqq5myf" path="res://scenes/enemies/enemy_base/enemy_walking_state.gd" id="4_jn67k"]
[ext_resource type="Texture2D" uid="uid://0t52vbrmgaf6" path="res://sprites/enemies/zombie_strow/croler/strawberry_zombie_down4.png" id="5_ejl6g"]
[ext_resource type="Script" uid="uid://boq6sn6mphtta" path="res://scenes/enemies/enemy_base/enemy_state_jumping.gd" id="5_jn67k"]
[ext_resource type="Texture2D" uid="uid://di18t6x8k7j3l" path="res://sprites/enemies/zombie_strow/strawberry_zombie_walking4.png" id="5_mbhh2"]
[ext_resource type="Texture2D" uid="uid://b1o50pt00unub" path="res://sprites/enemies/zombie_strow/croler/strawberry_zombie_down5.png" id="6_bot8r"]
[ext_resource type="Texture2D" uid="uid://bf0qlol7e7e25" path="res://sprites/enemies/zombie_strow/strawberry_zombie_walking5.png" id="6_osv15"]
[ext_resource type="Texture2D" uid="uid://cqjtm1dpjaflm" path="res://sprites/enemies/zombie_strow/strawberry_zombie_walking6.png" id="7_2e66r"]
[ext_resource type="Texture2D" uid="uid://cbdqpw8tqnw1s" path="res://sprites/enemies/zombie_strow/croler/strawberry_zombie_down6.png" id="7_u7ep8"]
[ext_resource type="Texture2D" uid="uid://bbon0iva2sc3u" path="res://sprites/enemies/zombie_strow/croler/strawberry_zombie_down7.png" id="8_wosvo"]
[ext_resource type="Script" uid="uid://cfbjrirjnjkt0" path="res://scenes/enemies/enemy_base/enemy_state_death.gd" id="18_xf5mb"]
[ext_resource type="Texture2D" uid="uid://8dt3talba7en" path="res://sprites/enemies/zombie_strow/efeccts/flame.png" id="19_avrlj"]
[ext_resource type="Script" uid="uid://c1nc8p8f8nvuy" path="res://scenes/enemies/enemy_base/enemy_state_perma_death.gd" id="19_ejl6g"]

[sub_resource type="SpriteFrames" id="SpriteFrames_621k7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ouw8c")
}, {
"duration": 1.0,
"texture": ExtResource("3_xf5mb")
}, {
"duration": 1.0,
"texture": ExtResource("4_avrlj")
}, {
"duration": 1.0,
"texture": ExtResource("5_ejl6g")
}, {
"duration": 1.0,
"texture": ExtResource("6_bot8r")
}, {
"duration": 1.0,
"texture": ExtResource("7_u7ep8")
}, {
"duration": 1.0,
"texture": ExtResource("8_wosvo")
}],
"loop": true,
"name": &"croler",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_2hqhx")
}, {
"duration": 1.0,
"texture": ExtResource("3_ax8da")
}, {
"duration": 1.0,
"texture": ExtResource("4_f1jo1")
}, {
"duration": 1.0,
"texture": ExtResource("5_mbhh2")
}, {
"duration": 1.0,
"texture": ExtResource("6_osv15")
}, {
"duration": 1.0,
"texture": ExtResource("7_2e66r")
}],
"loop": true,
"name": &"walking",
"speed": 11.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2fyc8"]
size = Vector2(15, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jn67k"]
size = Vector2(904, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ouw8c"]

[sub_resource type="Curve" id="Curve_avrlj"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.7265625, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_avrlj"]
offsets = PackedFloat32Array(0, 0.39215687, 0.8333333)
colors = PackedColorArray(0.9045021, 0.55328083, 1.92523e-07, 1, 1, 0.85882354, 0.34509805, 1, 1, 1, 1, 1)

[node name="enemy_base" type="CharacterBody2D" unique_id=1723221989]
collision_layer = 4
script = ExtResource("1_dsnet")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1030262973]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_621k7")
animation = &"croler"
frame = 1
frame_progress = 0.6523921

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=2114907794]
visible = false
texture = ExtResource("1_2hqhx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1858300569]
position = Vector2(-0.5, 6.5)
shape = SubResource("RectangleShape2D_2fyc8")

[node name="StateMachine" type="Node" parent="." unique_id=308528331 node_paths=PackedStringArray("default_state")]
script = ExtResource("2_2fyc8")
default_state = NodePath("EnemyStateWalking")
metadata/_custom_type_script = "uid://0jnjbdmlqedf"

[node name="EnemyStateWalking" type="Node" parent="StateMachine" unique_id=1043463101]
script = ExtResource("4_jn67k")

[node name="EnemyStateJumping" type="Node" parent="StateMachine" unique_id=471940687]
script = ExtResource("5_jn67k")

[node name="EnemyStateDeath" type="Node" parent="StateMachine" unique_id=1008171453]
script = ExtResource("18_xf5mb")

[node name="EnemyStatePermaDeath" type="Node" parent="StateMachine" unique_id=156089970]
script = ExtResource("19_ejl6g")

[node name="detectors" type="Node2D" parent="." unique_id=1873342236]

[node name="left" type="RayCast2D" parent="detectors" unique_id=857128993]
unique_name_in_owner = true
position = Vector2(-10, 1)
target_position = Vector2(-10, 0)

[node name="left_down" type="RayCast2D" parent="detectors" unique_id=1610917313]
unique_name_in_owner = true
position = Vector2(-15, 6)
target_position = Vector2(0, 13)

[node name="right" type="RayCast2D" parent="detectors" unique_id=771919943]
unique_name_in_owner = true
position = Vector2(7, 0)
target_position = Vector2(14, 0)

[node name="right_down" type="RayCast2D" parent="detectors" unique_id=1418085169]
unique_name_in_owner = true
position = Vector2(15, 8)
target_position = Vector2(0, 11)

[node name="enemy_radar" type="Area2D" parent="." unique_id=896640782]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_radar" unique_id=503901447]
position = Vector2(473, 6)
shape = SubResource("RectangleShape2D_jn67k")

[node name="damage_area" type="Area2D" parent="." unique_id=703030898]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage_area" unique_id=450247670]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_ouw8c")
debug_color = Color(0.9480652, 0.29247907, 0.33110332, 0.41960785)

[node name="flames" type="CPUParticles2D" parent="." unique_id=2098204151]
unique_name_in_owner = true
position = Vector2(0, 8)
emitting = false
amount = 50
texture = ExtResource("19_avrlj")
emission_shape = 1
emission_sphere_radius = 17.22
direction = Vector2(1, -6.64)
gravity = Vector2(0, -50)
initial_velocity_min = 5.92
initial_velocity_max = 35.92
scale_amount_curve = SubResource("Curve_avrlj")
color_ramp = SubResource("Gradient_avrlj")
